cabal-version: 2.2
name:         language-dot
version:      0.0.8
category:     Language
synopsis:     A library for the analysis and creation of Graphviz DOT files
description:  A library for the analysis and creation of Graphviz DOT files.
author:       Brian Lewis <brian@lorf.org>
maintainer:   Brian Lewis <brian@lorf.org>
copyright:    (c) 2009 Galois, Inc.
license:      BSD-3-Clause
license-file: LICENSE

extra-source-files:
  src/test.hs

flag executable
  description: Build the `ppdot' executable.
  default:     True

library
  hs-source-dirs:
    src

  exposed-modules:
    Language.Dot
    Language.Dot.Parser
    Language.Dot.Pretty
    Language.Dot.Syntax

  build-depends:
    base    == 4.*,
    mtl     == 1.* || == 2.*,
    parsec  == 3.*,
    pretty  == 1.*

  ghc-options: -Wall

  default-language:    Haskell2010

-- executable ppdot
--   if flag(executable)
--     buildable: True
--   else
--     buildable: False
--
--   hs-source-dirs:
--     src
--
--   main-is: ppdot.hs
--
--   ghc-options: -Wall
--   if impl(ghc >= 6.8)
--     ghc-options: -fwarn-tabs
--
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: git://github.com/bsl/language-dot.git
